# sound-detector

./: README.md  pyproject.toml
sound_detector/: detector.py
