[tool.poetry]
name = "sound-detector"
version = "0.1.0"
description = ""
authors = ["Igor Gorlov <gorlov35@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyaudio = "^0.2.11"
numpy = "^1.23.0"
pygame = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
